--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-"Hello World" 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Ghritachi Mahajani</title>
+  <meta name="description" content="Portfolio">
+  <meta name="author" content="Ghritachi Mahajani">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Ghritachi Mahajani</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-5"></div>
+          <div class="col-md-5 offset-md-2"></div>
+        </div>
+    </div>
+  <!-- <script src="js/scripts.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+</body>
+<style>
+  body{
+    background-color: #E9D3D0;
+  }
+  .navbar{
+    background-color:#F42272;
+    border-radius: 0 0 10px 10px;
+    margin-bottom:50px;
+  }
+  .navbar-brand, .nav-link{
+    color:#BEE7B8!important;
+    font-weight: bold;
+    font-family:monospace;
+  }
+  .container .row .col-md-5 {
+    background-color: #F42272;
+    border-radius: 20px;
+    min-height: 100px;
+  }
+
+</style>
+</html>
