--- a/index.html
+++ b/index.html
@@ -6,57 +6,58 @@
   <meta name="description" content="Portfolio">
   <meta name="author" content="Ghritachi Mahajani">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+  <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Ghritachi Mahajani</a>
+  <nav class="navbar navbar-expand-md">
+    <div class="container-fluid flex-column">
+      <a class="navbar-brand justify-content-center" href="#">Ghritachi Mahajani</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+        <div class="navbar-nav nav nav-pills" id="pills-tab" role="tablist" >
+          <a class="nav-link active" id="home-tab" type="button" data-bs-toggle="pill" data-bs-target="#home"  role="tab" aria-controls="home" aria-selected="true">Home</a>
+          <a class="nav-link"  id="about-tab" type="button" data-bs-toggle="pill" data-bs-target="#about"  role="tab" aria-controls="about" aria-selected="false">About</a>
+          <a class="nav-link" id="work-tab" type="button" data-bs-toggle="pill" data-bs-target="#work"  role="tab" aria-controls="work" aria-selected="false">Work</a>
+          <a class="nav-link"  id="contact-tab" type="button" data-bs-toggle="pill" data-bs-target="#contact"  role="tab" aria-controls="contact" aria-selected="false" >Contact</a>
         </div>
       </div>
     </div>
   </nav>
     <div class="container">
-        <div class="row">
-          <div class="col-md-5"></div>
-          <div class="col-md-5 offset-md-2"></div>
-        </div>
+      <div class="tab-content" id="pills-tabContent">
+        <section class= "tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab" id = "home" >
+         <div class="container py-590 text-center">
+           <p>
+            Hi! I am Ghritachi Mahajani, a front end developer from New Delhi, India.
+            <br>
+            I enjoy making good looking websites and mobile apps. I also have an interest in Machine Learning.
+            <br>
+            <br>
+            <!-- I would love for you to explore my work.
+            Have fun! -->
+           </p>
+         </div>
+        </section>
+        <section class="tab-pane fade" role="tabpanel" aria-labelledby="about-tab" id = "about"> 
+          about
+        </section>
+        <section class="tab-pane fade" role="tabpanel" aria-labelledby="work-tab" id = "work">
+          Work
+        </section>
+        <section class="tab-pane fade" role="tabpanel" aria-labelledby="contact-tab" id = "contact"> 
+          contact
+        </section>
+      </div>
     </div>
   <!-- <script src="js/scripts.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <script>
+  </script>
 </body>
-<style>
-  body{
-    background-color: #E9D3D0;
-  }
-  .navbar{
-    background-color:#F42272;
-    border-radius: 0 0 10px 10px;
-    margin-bottom:50px;
-  }
-  .navbar-brand, .nav-link{
-    color:#BEE7B8!important;
-    font-weight: bold;
-    font-family:monospace;
-  }
-  .container .row .col-md-5 {
-    background-color: #F42272;
-    border-radius: 20px;
-    min-height: 100px;
-  }
-
-</style>
 </html>
