--- a/index.html
+++ b/index.html
@@ -8,56 +8,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-md">
-    <div class="container-fluid flex-column">
-      <a class="navbar-brand justify-content-center" href="#">Ghritachi Mahajani</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-        <div class="navbar-nav nav nav-pills" id="pills-tab" role="tablist" >
-          <a class="nav-link active" id="home-tab" type="button" data-bs-toggle="pill" data-bs-target="#home"  role="tab" aria-controls="home" aria-selected="true">Home</a>
-          <a class="nav-link"  id="about-tab" type="button" data-bs-toggle="pill" data-bs-target="#about"  role="tab" aria-controls="about" aria-selected="false">About</a>
-          <a class="nav-link" id="work-tab" type="button" data-bs-toggle="pill" data-bs-target="#work"  role="tab" aria-controls="work" aria-selected="false">Work</a>
-          <a class="nav-link"  id="contact-tab" type="button" data-bs-toggle="pill" data-bs-target="#contact"  role="tab" aria-controls="contact" aria-selected="false" >Contact</a>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-light sticky-top">
+      <div class="container-fluid justify-content-center">
+        <ul class="navbar-nav nav nav-tabs gx-2" id="myNav" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active .navbar-text text-secondary fs-5" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab" aria-controls="about" aria-selected="true" >About Me</buttonn>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link .navbar-text text-secondary fs-5" id="portfolio-tab" data-bs-toggle="tab" data-bs-target="#portfolio" type="button" role="tab" aria-controls="portfolio" aria-selected="false" >Portfolio</buttonn>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="tab-content" id="myContent">
+      <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">
+        <div class="container">
+          <h3 class="display-3">Hello.
+          </h3>
+          <p class="display-5">I am<span class="display-2"> Ghritachi Mahajani,</span></p>
+          <p class="display-5">a front end developer, with experience in HTML,CSS, SCSS, Bootstrap, Javascript, JQuery and React</p>
+        </div>
+        <div class="container mt-5">
+          <h4>Experience</h4>
+          <p class="display-6">
+            I have worked for 2 years in Tata Consultancy Services.
+          </p>
+        </div>
+        <div class="container mt-5">
+          <h4>Other Interests</h4>
+          <p class="display-6">
+            I also enjoy Machine Learning and am adept in Python.
+          </p>
         </div>
       </div>
+      <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">port</div>
     </div>
-  </nav>
-    <div class="container">
-      <div class="tab-content" id="pills-tabContent">
-        <section class= "tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab" id = "home" >
-         <div class="container py-590 text-center">
-           <p>
-            Hi! I am Ghritachi Mahajani, a front end developer from New Delhi, India.
-            <br>
-            I enjoy making good looking websites and mobile apps. I also have an interest in Machine Learning.
-            <br>
-            <br>
-            <!-- I would love for you to explore my work.
-            Have fun! -->
-           </p>
-         </div>
-        </section>
-        <section class="tab-pane fade" role="tabpanel" aria-labelledby="about-tab" id = "about"> 
-          about
-        </section>
-        <section class="tab-pane fade" role="tabpanel" aria-labelledby="work-tab" id = "work">
-          Work
-        </section>
-        <section class="tab-pane fade" role="tabpanel" aria-labelledby="contact-tab" id = "contact"> 
-          contact
-        </section>
-      </div>
-    </div>
+  </div>
+    
   <!-- <script src="js/scripts.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  <script>
-  </script>
 </body>
 </html>
