--- a/index.html
+++ b/index.html
@@ -85,5 +85,35 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <script src="getProjects.js"></script>
   <script src="canvas.js"></script>
+
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script> -->
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyCudMaO4ozSlWbgO5T_NrhRefeNAyN7k1k",
+    authDomain: "portfolio-b754d.firebaseapp.com",
+    projectId: "portfolio-b754d",
+    storageBucket: "portfolio-b754d.appspot.com",
+    messagingSenderId: "553873290590",
+    appId: "1:553873290590:web:1a10e27d83e74f8017cbcf",
+    measurementId: "G-NWN17LC46H"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  // firebase.analytics();
+
+  // var database = firebase.database();
+  
+
+</script>
 </body>
 </html>
+
