--- a/src/index.html
+++ b/src/index.html
@@ -6,25 +6,26 @@
   <meta name="description" content="Portfolio">
   <meta name="author" content="Ghritachi Mahajani">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./style2.css">
+  <link rel="stylesheet" href="./animations.css">
 </head>
 <body>
-  <canvas id="main-canvas"></canvas>
+  <!-- <canvas id="main-canvas"></canvas> -->
   <div class="container-fluid">
     
-    <nav class="navbar navbar-expand-lg sticky-top">
-      <div class="container-fluid justify-content-center">
-        <ul class="navbar-nav nav nav-tabs gx-2" id="myNav" role="tablist">
+    <nav class="navbar navbar-expand fixed-top">
+      <div class="container-fluid justify-content-md-center">
+        <ul class="navbar-nav nav nav-tabs flex-grow-1 flex-sm-grow-0 justify-content-between gx-2" id="myNav" role="tablist">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active .navbar-text text-secondary fs-5" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab" aria-controls="about" aria-selected="true" >About Me</buttonn>
+            <button class="nav-link active navbar-text fs-5" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab" aria-controls="about" aria-selected="true" >About Me</buttonn>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link .navbar-text text-secondary fs-5" id="portfolio-tab" data-bs-toggle="tab" data-bs-target="#portfolio" type="button" role="tab" aria-controls="portfolio" aria-selected="false" >Portfolio</buttonn>
+            <button class="nav-link navbar-text fs-5" id="portfolio-tab" data-bs-toggle="tab" data-bs-target="#portfolio" type="button" role="tab" aria-controls="portfolio" aria-selected="false" >Portfolio</buttonn>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link .navbar-text text-secondary fs-5" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false" >Contact Me</buttonn>
+            <button class="nav-link navbar-text fs-5" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false" >Contact Me</buttonn>
           </li>
         </ul>
       </div>
@@ -33,22 +34,36 @@
     <div class="tab-content" id="myContent">
       <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">
         <div class="container">
-          <h3 class="display-3">Hello.
+          <div class="row intro">
+            <div class="col intro-text">
+          <h3 class="display-3">Hi.
           </h3>
           <p class="display-5">I am<span class="display-2"> Ghritachi Mahajani,</span></p>
-          <p class="display-5">a front end developer, with experience in HTML,CSS, SCSS, Bootstrap, Javascript, JQuery and React</p>
+          <p class="display-5">a front end developer from New Delhi, India.</p>
         </div>
-        <div class="container mt-5">
-          <h4>Experience</h4>
-          <p class="display-6">
-            I have worked for 2 years in Tata Consultancy Services.
-          </p>
+        <div class="col intro-graphics d-flex flex-column align-items-center">
+          <div class="image-circle">
+            <!-- <img src="me.png" alt="Photo of website author"> -->
+          </div>
+          <div class="explore-button">
+            <p>Find out more &rarr;</p>
+          </div>
         </div>
-        <div class="container mt-5">
-          <h4>Other Interests</h4>
-          <p class="display-6">
-            I also enjoy Machine Learning and am adept in Python.
-          </p>
+        </div>
+        </div>
+        <div class="more-about">
+          <div class="container" id="experience">
+            <h4>Experience</h4>
+            <p class="display-6">
+              I have worked for 2 years in Tata Consultancy Services., with experience in HTML,CSS, SCSS, Bootstrap, Javascript, JQuery and React.
+            </p>
+          </div>
+          <div class="container mt-5">
+            <h4>Other Interests</h4>
+            <p class="display-6">
+              I also enjoy Machine Learning and am adept in Python.
+            </p>
+          </div>
         </div>
       </div>
       <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
@@ -84,7 +99,8 @@
   <!-- <script src="js/scripts.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <script src="getProjects.js"></script>
-  <script src="canvas.js"></script>
+  <script src="ui.js"></script>
+  <!-- <script src="canvas.js"></script> -->
 
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
