Added nice pattern to header

--- a/src/ml/index.html
+++ b/src/ml/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+        <div class="pattern"></div>
         <p class="intro">
             Hi, I am Ghritachi Mahajani. 
         </p>
