--- a/src/ml/index.html
+++ b/src/ml/index.html
@@ -9,10 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <link type='text/css' rel="stylesheet" href="style.css">
-
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+        <link type='text/css' rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/65b93b3471.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,13 +21,14 @@
             Hi, I am Ghritachi Mahajani. 
         </p>
         <p class="sub-intro">
-            A developer with interest in Machine Learning.
+            A software developer with an interest in Machine Learning.
+            <a href="#about-container">
+                <i class="fa-solid fa-circle-down"></i>
+            </a>
         </p>
         <div id="info">
             <p class="sub-intro">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                  </svg>
+                <i class="fa-solid fa-location-pin"></i>
                   New Delhi, India
             </p>
         </div>
@@ -36,7 +36,7 @@
     <div class="content">
         <section id="projects-content">
             <p class="section-title">Projects</p>
-            <div id="project-listing-container">
+            <div id="project-listing-container" class="section-body">
                 <ul class="row" id="project-list">
                     <li class="project-item col">
                         <div class="project-item-container">
@@ -80,6 +80,77 @@
                         </div>
                     </li> -->
                 </ul>
+            </div>
+        </section>
+        <section id="about-content">
+            <p class="section-title">About Me</p>
+            <div id="about-container" class="section-body">
+                <div class="skill-container">
+                    <ul class="skills-list">
+                        <!-- <li class="skill-category">
+                            <h2 class="title">Machine Learning</h2>
+                            <ul class="skill-category-list">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li> -->
+                        
+                        <li class="skill-category">
+                            <h2 class="title">I have 3.5 years experience in web & javascript frameworks!</h2>
+                            <ul class="framework">
+                                <li>
+                                    <i class="fa-brands fa-react"></i>
+                                <span>
+                                    React JS/Native
+                                </span>
+                                </li>
+                                <li>
+                                    <i class="fa-brands fa-vuejs"></i>
+                                <span>
+                                    Vue JS
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-css3-alt"></i>
+                                <i class="fa-brands fa-bootstrap"></i>
+                                <i class="fa-brands fa-sass"></i>
+                                <span>
+                                    Styling
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-node"></i>
+                                <span>
+                                    Node JS
+                                </span>
+                            </li>
+                                <li>
+                                    <i class="fa-brands fa-js"></i>
+                                    <span>
+                                        JavaScript, TypeScript, jQuery
+                                    </span>
+                                </li>
+                            </ul>
+                            <ul class="highlights">
+                                <li>
+                                    I create dynamic, interactive UI for both 
+                                    <span>Web</span> and <span>Mobile</span>.
+                                </li>
+                                <li>
+                                    Proficient in handling forms, events, API calls.
+                                </li>
+                                <li>
+                                    All about responsiveness.
+                                </li>
+                                <li>
+                                    Good at debugging issues!
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </div>
