--- a/src/ml/index.html
+++ b/src/ml/index.html
@@ -67,7 +67,7 @@
                             <a target='blank' href="https://github.com/gritsiem/agfzb-CloudAppDevelopment_Capstone" class="link">Find
                                 out more</a>
                             <br>
-                            <a target='blank' href="https://ghritmaha.eu-gb.mybluemix.net/djangoapp/" class="link"> Project Site</a>
+<!--                             <a target='blank' href="https://ghritmaha.eu-gb.mybluemix.net/djangoapp/" class="link"> Project Site</a> -->
 
                         </div>
                     </li>
