--- a/src/ml/index.html
+++ b/src/ml/index.html
@@ -21,7 +21,7 @@
             Hi, I am Ghritachi Mahajani. 
         </p>
         <p class="sub-intro">
-            A software developer with an interest in Machine Learning.
+            A software developer with skills in frontend development and Machine Learning.
             <a href="#about-container">
                 <i class="fa-solid fa-circle-down"></i>
             </a>
@@ -29,7 +29,7 @@
         <div id="info">
             <p class="sub-intro">
                 <i class="fa-solid fa-location-pin"></i>
-                  New Delhi, India
+                  Boulder, Colorado
             </p>
         </div>
     </header>
