--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ghritachi Mahajani</title>
+  <meta http-equiv="refresh" content="0;url=https://gritsiem.github.io/src/ml/index.html#about-container" />
   <meta name="description" content="Portfolio">
   <meta name="author" content="Ghritachi Mahajani">
   <meta name="viewport" content="width=device-width, initial-scale=1">
