--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ghritachi Mahajani</title>
-  <meta name="description" content="Portfolio">
-  <meta name="author" content="Ghritachi Mahajani">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="src/css/style2.css">
-  <link rel="stylesheet" href="src/css/animations.css">
-
-  
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Portfolio">
+    <meta name="author" content="Ghritachi Mahajani">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ghritachi Mahajani</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+        <!-- <link type='text/css' rel="stylesheet" href="src/index.css"> -->
+        <script src="https://kit.fontawesome.com/65b93b3471.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  
-</body>
-</html>
 
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
